--- a/src/main/resources/com/example/practice/manager_dashboard.fxml
+++ b/src/main/resources/com/example/practice/manager_dashboard.fxml
@@ -5,12 +5,12 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practice.ManagerDashboardController">
     <children>
-        <MenuBar>
+        <MenuBar style="-fx-background-color: #212121; -fx-text-fill: white;">
             <menus>
-                <Menu text="File">
+                <Menu text="File" style="-fx-text-fill: white;">
                     <MenuItem text="Logout" onAction="#handleLogout"/>
                 </Menu>
-                <Menu text="Employees">
+                <Menu text="Employees" style="-fx-text-fill: white;">
                     <MenuItem text="View All Employees" onAction="#handleShowAllEmployees"/>
                     <MenuItem text="View All Managers" onAction="#handleShowAllManagers"/>
                     <MenuItem text="Generate Random Employee" onAction="#handleGenerateRandomEmployee"/>
@@ -18,16 +18,16 @@
                     <MenuItem text="Count Employees in Department" onAction="#handleCountEmployeesInDepartment"/>
                     <MenuItem text="Change Employee Department" onAction="#handleChangeEmployeeDepartment"/>
                 </Menu>
-                <Menu text="Salary">
+                <Menu text="Salary" style="-fx-text-fill: white;">
                     <MenuItem text="Change Salary" onAction="#handleChangeSalary"/>
                 </Menu>
-                <Menu text="Statistics">
+                <Menu text="Statistics" style="-fx-text-fill: white;">
                     <MenuItem text="View Earnings by ID" onAction="#handleViewEarningsById"/>
                     <MenuItem text="View Payment History" onAction="#handleViewPaymentHistory"/>
                     <MenuItem text="View Department Earnings" onAction="#handleViewDepartmentEarnings"/>
                     <MenuItem text="View All Employees Earnings" onAction="#handleViewAllEmployeesEarnings"/>
                 </Menu>
-                <Menu text="Profile">
+                <Menu text="Profile" style="-fx-text-fill: white;">
                     <MenuItem text="Search User by ID" onAction="#handleSearchUserById"/>
                     <MenuItem text="Search User by Salary Type" onAction="#handleSearchUserBySalaryType"/>
                     <MenuItem text="Update Profile" onAction="#handleUpdateProfile"/>
@@ -37,32 +37,31 @@
         </MenuBar>
         <SplitPane dividerPositions="0.3">
             <items>
-                <VBox>
-                    <Label text="Manager Dashboard" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
-                    <Button text="View All Employees" onAction="#handleShowAllEmployees"/>
-                    <Button text="View All Managers" onAction="#handleShowAllManagers"/>
-                    <Button text="Generate Random Employee" onAction="#handleGenerateRandomEmployee"/>
-                    <Button text="Add Department" onAction="#handleAddDepartment"/>
-                    <Button text="Count Employees in Department" onAction="#handleCountEmployeesInDepartment"/>
-                    <Button text="Change Employee Department" onAction="#handleChangeEmployeeDepartment"/>
-                    <Button text="View Earnings by ID" onAction="#handleViewEarningsById"/>
-                    <Button text="View Payment History" onAction="#handleViewPaymentHistory"/>
-                    <Button text="View Department Earnings" onAction="#handleViewDepartmentEarnings"/>
-                    <Button text="View All Employees Earnings" onAction="#handleViewAllEmployeesEarnings"/>
-                    <Button text="Search User by ID" onAction="#handleSearchUserById"/>
-                    <Button text="Search User by Salary Type" onAction="#handleSearchUserBySalaryType"/>
-                    <Button text="Update Profile" onAction="#handleUpdateProfile"/>
-                    <Button text="Archive User" onAction="#handleArchiveUser"/>
-                    <Button text="Change Salary" onAction="#handleChangeSalary"/>
-                    <Button text="View All Departments" onAction="#handleViewAllDepartments"/>
-                    <Button text="UnArchive User" onAction="#handleUnarchiveUser"/>
-                    <Button text="show all archive employee" onAction="#handleViewAllArchivedEmployees"/>
-                    <Button text="Log out" onAction="#handleLogout"/>
-
+                <VBox style="-fx-background-color: #2e2e2e;">
+                    <Label text="Manager Dashboard" style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: white; -fx-padding: 10px;"/>
+                    <Button text="View All Employees" onAction="#handleShowAllEmployees" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="View All Managers" onAction="#handleShowAllManagers" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="Generate Random Employee" onAction="#handleGenerateRandomEmployee" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="Add Department" onAction="#handleAddDepartment" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="Count Employees in Department" onAction="#handleCountEmployeesInDepartment" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="Change Employee Department" onAction="#handleChangeEmployeeDepartment" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="View Earnings by ID" onAction="#handleViewEarningsById" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="View Payment History" onAction="#handleViewPaymentHistory" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="View Department Earnings" onAction="#handleViewDepartmentEarnings" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="View All Employees Earnings" onAction="#handleViewAllEmployeesEarnings" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="Search User by ID" onAction="#handleSearchUserById" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="Search User by Salary Type" onAction="#handleSearchUserBySalaryType" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="Update Profile" onAction="#handleUpdateProfile" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="Archive User" onAction="#handleArchiveUser" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="Change Salary" onAction="#handleChangeSalary" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="View All Departments" onAction="#handleViewAllDepartments" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="UnArchive User" onAction="#handleUnarchiveUser" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="show all archive employee" onAction="#handleViewAllArchivedEmployees" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                    <Button text="Log out" onAction="#handleLogout" style="-fx-background-color: #ff5252; -fx-text-fill: white; -fx-border-color: #ff1744; -fx-border-width: 1px; -fx-padding: 10px 20px; -fx-font-size: 14px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
                 </VBox>
-                <VBox>
-                    <Label text="Result:" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
-                    <TextArea fx:id="resultTextArea" editable="false" wrapText="true" prefHeight="600.0" prefWidth="500.0"/>
+                <VBox style="-fx-background-color: #2e2e2e;">
+                    <Label text="Result:" style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: white; -fx-padding: 10px;"/>
+                    <TextArea fx:id="resultTextArea" editable="false" wrapText="true" prefHeight="600.0" prefWidth="500.0" style="-fx-control-inner-background: white; -fx-text-fill: black; -fx-padding: 10px; -fx-border-color: #616161; -fx-border-width: 1px; -fx-border-radius: 5px; -fx-background-color: #2e2e2e;"/>
                 </VBox>
             </items>
         </SplitPane>
