--- a/src/main/resources/com/example/practice/employee_dashboard.fxml
+++ b/src/main/resources/com/example/practice/employee_dashboard.fxml
@@ -4,65 +4,58 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.practice.EmployeeDashboardController"
-      spacing="20"
-      style="-fx-padding: 10px; -fx-background-color: #262626; -fx-text-fill: white;">
+<HBox spacing="20"      style="-fx-background-color: linear-gradient(to bottom, #2C3E50, #4CA1AF);"
+
+      xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practice.EmployeeDashboardController">
 
     <children>
         <VBox spacing="10">
-            <Label text="Employee Dashboard" style="-fx-font-size: 24px; -fx-text-fill: white;" />
+            <Label style="-fx-font-size: 24px; -fx-text-fill: white;" text="Employee Dashboard" />
 
             <GridPane hgap="10" vgap="10">
                 <padding>
-                    <Insets top="10" right="10" bottom="10" left="10" />
+                    <Insets bottom="10" left="10" right="10" top="10" />
                 </padding>
 
-                <Button text="View total earnings by ID" onAction="#handleViewEarningsById"
-                        style="-fx-background-color: #666666; -fx-text-fill: white;"
-                        GridPane.rowIndex="0" GridPane.columnIndex="0" />
-                <Button text="View payment history" onAction="#handleViewPaymentHistory"
-                        style="-fx-background-color: #666666; -fx-text-fill: white;"
-                        GridPane.rowIndex="1" GridPane.columnIndex="0" />
-                <Button text="Search user by ID" onAction="#handleSearchUserById"
-                        style="-fx-background-color: #666666; -fx-text-fill: white;"
-                        GridPane.rowIndex="2" GridPane.columnIndex="0" />
-                <Button text="Search user by Salary Type" onAction="#handleSearchUserBySalaryType"
-                        style="-fx-background-color: #666666; -fx-text-fill: white;"
-                        GridPane.rowIndex="3" GridPane.columnIndex="0" />
-                <Button text="Show all employees" onAction="#handleShowAllEmployees"
-                        style="-fx-background-color: #666666; -fx-text-fill: white;"
-                        GridPane.rowIndex="4" GridPane.columnIndex="0" />
-                <Button text="Show all managers" onAction="#handleShowAllManagers"
-                        style="-fx-background-color: #666666; -fx-text-fill: white;"
-                        GridPane.rowIndex="5" GridPane.columnIndex="0" />
-                <Button text="Show all archive employees" onAction="#handleViewAllArchivedEmployees"
-                        style="-fx-background-color: #666666; -fx-text-fill: white;"
-                        GridPane.rowIndex="6" GridPane.columnIndex="0" />
-                <Button text="Update profile" onAction="#handleUpdateProfile"
-                        style="-fx-background-color: #666666; -fx-text-fill: white;"
-                        GridPane.rowIndex="7" GridPane.columnIndex="0" />
-                <Button text="View department earnings" onAction="#handleViewDepartmentEarnings"
-                        style="-fx-background-color: #666666; -fx-text-fill: white;"
-                        GridPane.rowIndex="8" GridPane.columnIndex="0" />
-                <Button text="View all employees' earnings" onAction="#handleViewAllEmployeesEarnings"
-                        style="-fx-background-color: #666666; -fx-text-fill: white;"
-                        GridPane.rowIndex="9" GridPane.columnIndex="0" />
-                <Button text="Log out" onAction="#handleLogout"
-                        style="-fx-background-color: #ff5252; -fx-text-fill: white; -fx-border-color: #ff1744; -fx-border-width: 1px; -fx-padding: 10px 20px; -fx-font-size: 14px; -fx-border-radius: 5px; -fx-background-radius: 5px;"
-                        GridPane.rowIndex="10" GridPane.columnIndex="0" />
+                <Button onAction="#handleViewEarningsById" style="-fx-background-color: #666666; -fx-text-fill: white;" text="View total earnings by ID" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Button onAction="#handleViewPaymentHistory" style="-fx-background-color: #666666; -fx-text-fill: white;" text="View payment history" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Button onAction="#handleSearchUserById" style="-fx-background-color: #666666; -fx-text-fill: white;" text="Search user by ID" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <Button onAction="#handleSearchUserBySalaryType" style="-fx-background-color: #666666; -fx-text-fill: white;" text="Search user by Salary Type" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <Button onAction="#handleShowAllEmployees" style="-fx-background-color: #666666; -fx-text-fill: white;" text="Show all employees" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <Button onAction="#handleShowAllManagers" style="-fx-background-color: #666666; -fx-text-fill: white;" text="Show all managers" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                <Button onAction="#handleViewAllArchivedEmployees" style="-fx-background-color: #666666; -fx-text-fill: white;" text="Show all archive employees" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                <Button onAction="#handleUpdateProfile" style="-fx-background-color: #666666; -fx-text-fill: white;" text="Update profile" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+                <Button onAction="#handleViewDepartmentEarnings" style="-fx-background-color: #666666; -fx-text-fill: white;" text="View department earnings" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+                <Button onAction="#handleViewAllEmployeesEarnings" style="-fx-background-color: #666666; -fx-text-fill: white;" text="View all employees' earnings" GridPane.columnIndex="0" GridPane.rowIndex="9" />
+                <Button onAction="#handleLogout" style="-fx-background-color: #ff5252; -fx-text-fill: white; -fx-border-color: #ff1744; -fx-border-width: 1px; -fx-padding: 10px 20px; -fx-font-size: 14px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Log out" GridPane.columnIndex="0" GridPane.rowIndex="10" />
+            <columnConstraints>
+               <ColumnConstraints />
+            </columnConstraints>
+            <rowConstraints>
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+               <RowConstraints />
+            </rowConstraints>
             </GridPane>
         </VBox>
 
         <VBox spacing="10">
-            <Label text="Result:" style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: white;" />
-            <TextArea fx:id="resultTextArea" editable="false" wrapText="true" prefHeight="400.0" prefWidth="500.0"
-                      style="-fx-background-color: white; -fx-text-fill: black;" />
+            <Label style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: white;" text="Result:" />
+            <TextArea fx:id="resultTextArea" editable="false" prefHeight="430.0" prefWidth="622.0" style="-fx-background-color: white; -fx-text-fill: black;" wrapText="true" />
         </VBox>
     </children>
 </HBox>
