--- a/src/main/resources/com/example/practice/manager_dashboard.fxml
+++ b/src/main/resources/com/example/practice/manager_dashboard.fxml
@@ -1,67 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practice.ManagerDashboardController">
+<AnchorPane prefHeight="653.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.practice.ManagerDashboardController">
     <children>
-        <MenuBar style="-fx-background-color: #212121; -fx-text-fill: white;">
+        <!-- Ensure MenuBar style is correctly applied -->
+        <MenuBar style="-fx-background-color: linear-gradient(to bottom, #2C3E50, #4CA1AF);">
             <menus>
-                <Menu text="File" style="-fx-text-fill: white;">
-                    <MenuItem text="Logout" onAction="#handleLogout"/>
+                <Menu style="-fx-text-fill: white;" text="File">
+                    <MenuItem onAction="#handleLogout" text="Logout" />
                 </Menu>
-                <Menu text="Employees" style="-fx-text-fill: white;">
-                    <MenuItem text="View All Employees" onAction="#handleShowAllEmployees"/>
-                    <MenuItem text="View All Managers" onAction="#handleShowAllManagers"/>
-                    <MenuItem text="Generate Random Employee" onAction="#handleGenerateRandomEmployee"/>
-                    <MenuItem text="Add Department" onAction="#handleAddDepartment"/>
-                    <MenuItem text="Count Employees in Department" onAction="#handleCountEmployeesInDepartment"/>
-                    <MenuItem text="Change Employee Department" onAction="#handleChangeEmployeeDepartment"/>
+                <Menu style="-fx-text-fill: white;" text="Employees">
+                    <MenuItem onAction="#handleShowAllEmployees" text="View All Employees" />
+                    <MenuItem onAction="#handleShowAllManagers" text="View All Managers" />
+                    <MenuItem onAction="#handleGenerateRandomEmployee" text="Generate Random Employee" />
+                    <MenuItem onAction="#handleAddDepartment" text="Add Department" />
+                    <MenuItem onAction="#handleCountEmployeesInDepartment" text="Count Employees in Department" />
+                    <MenuItem onAction="#handleChangeEmployeeDepartment" text="Change Employee Department" />
                 </Menu>
-                <Menu text="Salary" style="-fx-text-fill: white;">
-                    <MenuItem text="Change Salary" onAction="#handleChangeSalary"/>
+                <Menu style="-fx-text-fill: white;" text="Salary">
+                    <MenuItem onAction="#handleChangeSalary" text="Change Salary" />
                 </Menu>
-                <Menu text="Statistics" style="-fx-text-fill: white;">
-                    <MenuItem text="View Earnings by ID" onAction="#handleViewEarningsById"/>
-                    <MenuItem text="View Payment History" onAction="#handleViewPaymentHistory"/>
-                    <MenuItem text="View Department Earnings" onAction="#handleViewDepartmentEarnings"/>
-                    <MenuItem text="View All Employees Earnings" onAction="#handleViewAllEmployeesEarnings"/>
+                <Menu style="-fx-text-fill: white;" text="Statistics">
+                    <MenuItem onAction="#handleViewEarningsById" text="View Earnings by ID" />
+                    <MenuItem onAction="#handleViewPaymentHistory" text="View Payment History" />
+                    <MenuItem onAction="#handleViewDepartmentEarnings" text="View Department Earnings" />
+                    <MenuItem onAction="#handleViewAllEmployeesEarnings" text="View All Employees Earnings" />
                 </Menu>
-                <Menu text="Profile" style="-fx-text-fill: white;">
-                    <MenuItem text="Search User by ID" onAction="#handleSearchUserById"/>
-                    <MenuItem text="Search User by Salary Type" onAction="#handleSearchUserBySalaryType"/>
-                    <MenuItem text="Update Profile" onAction="#handleUpdateProfile"/>
-                    <MenuItem text="Archive User" onAction="#handleArchiveUser"/>
+                <Menu style="-fx-text-fill: white;" text="Profile">
+                    <MenuItem onAction="#handleSearchUserById" text="Search User by ID" />
+                    <MenuItem onAction="#handleSearchUserBySalaryType" text="Search User by Salary Type" />
+                    <MenuItem onAction="#handleUpdateProfile" text="Update Profile" />
+                    <MenuItem onAction="#handleArchiveUser" text="Archive User" />
                 </Menu>
             </menus>
         </MenuBar>
-        <SplitPane dividerPositions="0.3">
+        <SplitPane dividerPositions="0.2672651933701657" prefHeight="653.0" prefWidth="870.0">
             <items>
-                <VBox style="-fx-background-color: #2e2e2e;">
-                    <Label text="Manager Dashboard" style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: white; -fx-padding: 10px;"/>
-                    <Button text="View All Employees" onAction="#handleShowAllEmployees" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="View All Managers" onAction="#handleShowAllManagers" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="Generate Random Employee" onAction="#handleGenerateRandomEmployee" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="Add Department" onAction="#handleAddDepartment" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="Count Employees in Department" onAction="#handleCountEmployeesInDepartment" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="Change Employee Department" onAction="#handleChangeEmployeeDepartment" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="View Earnings by ID" onAction="#handleViewEarningsById" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="View Payment History" onAction="#handleViewPaymentHistory" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="View Department Earnings" onAction="#handleViewDepartmentEarnings" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="View All Employees Earnings" onAction="#handleViewAllEmployeesEarnings" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="Search User by ID" onAction="#handleSearchUserById" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="Search User by Salary Type" onAction="#handleSearchUserBySalaryType" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="Update Profile" onAction="#handleUpdateProfile" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="Archive User" onAction="#handleArchiveUser" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="Change Salary" onAction="#handleChangeSalary" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="View All Departments" onAction="#handleViewAllDepartments" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="UnArchive User" onAction="#handleUnarchiveUser" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="show all archive employee" onAction="#handleViewAllArchivedEmployees" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
-                    <Button text="Log out" onAction="#handleLogout" style="-fx-background-color: #ff5252; -fx-text-fill: white; -fx-border-color: #ff1744; -fx-border-width: 1px; -fx-padding: 10px 20px; -fx-font-size: 14px; -fx-border-radius: 5px; -fx-background-radius: 5px;"/>
+                <VBox prefHeight="651.0" prefWidth="253.0" style="-fx-background-color: #2e2e2e;">
+                    <Label style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: white; -fx-padding: 10px;" text="Manager Dashboard" />
+                    <!-- Ensure the styles are consistently applied -->
+                    <Button onAction="#handleShowAllEmployees" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="View All Employees" />
+                    <Button onAction="#handleShowAllManagers" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="View All Managers" />
+                    <Button onAction="#handleGenerateRandomEmployee" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Generate Random Employee" />
+                    <Button onAction="#handleAddDepartment" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Add Department" />
+                    <Button onAction="#handleCountEmployeesInDepartment" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Count Employees in Department" />
+                    <Button onAction="#handleChangeEmployeeDepartment" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Change Employee Department" />
+                    <Button onAction="#handleViewEarningsById" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="View Earnings by ID" />
+                    <Button onAction="#handleViewPaymentHistory" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="View Payment History" />
+                    <Button onAction="#handleViewDepartmentEarnings" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="View Department Earnings" />
+                    <Button onAction="#handleViewAllEmployeesEarnings" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="View All Employees Earnings" />
+                    <Button onAction="#handleSearchUserById" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Search User by ID" />
+                    <Button onAction="#handleSearchUserBySalaryType" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Search User by Salary Type" />
+                    <Button onAction="#handleUpdateProfile" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Update Profile" />
+                    <Button onAction="#handleArchiveUser" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Archive User" />
+                    <Button onAction="#handleChangeSalary" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Change Salary" />
+                    <Button onAction="#handleViewAllDepartments" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="View All Departments" />
+                    <Button onAction="#handleUnarchiveUser" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="UnArchive User" />
+                    <Button onAction="#handleViewAllArchivedEmployees" style="-fx-background-color: #424242; -fx-text-fill: white; -fx-border-color: #616161; -fx-border-width: 1px; -fx-padding: 5px 10px; -fx-font-size: 12px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Show All Archived Employees" />
+                    <Button onAction="#handleLogout" style="-fx-background-color: #ff5252; -fx-text-fill: white; -fx-border-color: #ff1744; -fx-border-width: 1px; -fx-padding: 10px 20px; -fx-font-size: 14px; -fx-border-radius: 5px; -fx-background-radius: 5px;" text="Log out" />
                 </VBox>
-                <VBox style="-fx-background-color: #2e2e2e;">
-                    <Label text="Result:" style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: white; -fx-padding: 10px;"/>
-                    <TextArea fx:id="resultTextArea" editable="false" wrapText="true" prefHeight="600.0" prefWidth="500.0" style="-fx-control-inner-background: white; -fx-text-fill: black; -fx-padding: 10px; -fx-border-color: #616161; -fx-border-width: 1px; -fx-border-radius: 5px; -fx-background-color: #2e2e2e;"/>
+                <VBox prefHeight="651.0" prefWidth="574.0" style="-fx-background-color: #2e2e2e;">
+                    <Label style="-fx-font-size: 20px; -fx-font-weight: bold; -fx-text-fill: white; -fx-padding: 10px;" text="Result:" />
+                    <TextArea fx:id="resultTextArea" editable="false" prefHeight="600.0" prefWidth="642.0" style="-fx-control-inner-background: white; -fx-text-fill: black; -fx-padding: 10px; -fx-border-color: #616161; -fx-border-width: 1px; -fx-border-radius: 5px; -fx-background-color: #2e2e2e;" wrapText="true" />
                 </VBox>
             </items>
         </SplitPane>
